[feat] added support for owner added beneficiaries

--- a/.env.local
+++ b/.env.local
@@ -1,9 +1,9 @@
-NEXT_PUBLIC_CHAIN_ID=cliffnet-1
-NEXT_PUBLIC_CHAIN_NAME=CosmWasm
-NEXT_PUBLIC_CHAIN_BECH32_PREFIX=wasm
-NEXT_PUBLIC_CHAIN_RPC_ENDPOINT=https://rpc.cliffnet.cosmwasm.com:443
-NEXT_PUBLIC_CHAIN_REST_ENDPOINT=https://lcd.cliffnet.cosmwasm.com:443
-NEXT_PUBLIC_STAKING_DENOM="upebble"
-NEXT_PUBLIC_SITE_TITLE=Cosmos Fanout
+NEXT_PUBLIC_CHAIN_ID=juno-1
+NEXT_PUBLIC_CHAIN_NAME=Juno
+NEXT_PUBLIC_CHAIN_BECH32_PREFIX=juno
+NEXT_PUBLIC_CHAIN_RPC_ENDPOINT=https://rpc-juno.itastakers.com:443
+NEXT_PUBLIC_CHAIN_REST_ENDPOINT=https://rpc-juno.itastakers.com:443
+NEXT_PUBLIC_STAKING_DENOM="ujuno"
+NEXT_PUBLIC_SITE_TITLE=Juno Fanout
 NEXT_PUBLIC_SITE_ICON_URL="/juno.svg"
 NEXT_PUBLIC_FANOUT_CONTRACT_ADDRESS=
